fixed tag overflow

--- a/src/components/SinglePost/PostInfo/postInfo.css
+++ b/src/components/SinglePost/PostInfo/postInfo.css
@@ -38,12 +38,14 @@
 }
 
 .tags_post-info {
-    margin-top: 25px;
+    margin-top: 15px;
     flex-wrap: wrap;
 }
 
 .tag_post-info {
-    margin-right: 10px;
+    margin: 10px 10px 0 0;
+    max-width: 250px;
+    overflow: hidden;
 }
 
 .bye_post-info {
